--- a/proof/index.html
+++ b/proof/index.html
@@ -20,7 +20,7 @@
 
 		<h2>Disproving the Lies of Links to Ignore</h2>
 		<ul>
-			<li><a href="egypt/hieroglyph">Hieroglyphics</a></li>
+			<li><a href="https://medude.github.io/aliens/proof/egypt/hieroglyph">Hieroglyphics</a></li>
 			<li><a href=""></a></li>
 		</ul>
 	</body>
