--- a/proof/egypt/hieroglyph/index.html
+++ b/proof/egypt/hieroglyph/index.html
@@ -10,13 +10,13 @@
 
 		<h2>What the Public Should Think</h2>
 		<p>
-			<a href="../../../images/helicopter.jpg">This image</a> is faked.
-			The <a href="../../../images/original-helicopter.jpg">original</a>
+			<a href="https://medude.github.io/aliens/images/helicopter.jpg">This image</a> is faked.
+			The <a href="https://medude.github.io/aliens/images/original-helicopter.jpg">original</a>
 			clearly shows that there is something attached to the nose of the
 			helicopter and that for the faked image to exist, it must have been
 			manipulated. This does not create any credibility and disproves
 			that the image is of a helicopter.
-			<a href="../../../images/helicopter-explination.gif">This image</a>
+			<a href="https://medude.github.io/aliens/images/helicopter-explination.gif">This image</a>
 			shows how the "helicopter" is actually the result of a "typo" of
 			sorts when some text was rewritten. The CIA has planted
 			<a href="http://members.tripod.com/~A_U_R_A/abydos.html" target="_top">
