--- a/cia_viewer/index.html
+++ b/cia_viewer/index.html
@@ -14,7 +14,7 @@
 			<h1 id="cia-title">US Central Intelligence Agency</h1>
 			<p id="options">Codename Beliver- <a href="../">Log Out</a></p>
 		</header>
-		<iframe src="../proof" id="iframe"></iframe>
+		<iframe src="https://medude.github.io/aliens/proof" id="iframe"></iframe>
 		<footer>
 			<p>
 				Notice- this is not an actual CIA website. It is simply a
